@@ -20,6 +20,7 @@ Chord@36
 CloseEnhMetaFile@4
 CloseFigure@4
 CloseMetaFile@4
+ColorCorrectPalette@16
 ColorMatchToTarget@12
 CombineRgn@16
 CombineTransform@12
