@@ -1,0 +1,4 @@
+LIBRARY ICMUI.DLL
+EXPORTS
+SetupColorMatchingA@4
+SetupColorMatchingW@4
