@@ -1,0 +1,55 @@
+LIBRARY mscms.dll
+EXPORTS
+AssociateColorProfileWithDeviceA@12
+AssociateColorProfileWithDeviceW@12
+CheckBitmapBits@36
+CheckColors@20
+CloseColorProfile@4
+ConvertColorNameToIndex@16
+ConvertIndexToColorName@16
+CreateColorTransformA@16
+CreateColorTransformW@16
+CreateDeviceLinkProfile@28
+CreateMultiProfileTransform@24
+CreateProfileFromLogColorSpaceA@8
+CreateProfileFromLogColorSpaceW@8
+DeleteColorTransform@4
+DisassociateColorProfileFromDeviceA@12
+DisassociateColorProfileFromDeviceW@12
+EnumColorProfilesA@20
+EnumColorProfilesW@20
+GetCMMInfo@8
+GetColorDirectoryA@12
+GetColorDirectoryW@12
+GetColorProfileElement@24
+GetColorProfileElementTag@12
+GetColorProfileFromHandle@12
+GetColorProfileHeader@8
+GetCountColorProfileElements@8
+GetNamedProfileInfo@8
+GetPS2ColorRenderingDictionary@20
+GetPS2ColorRenderingIntent@16
+GetPS2ColorSpaceArray@24
+GetStandardColorSpaceProfileA@16
+GetStandardColorSpaceProfileW@16
+InstallColorProfileA@8
+InstallColorProfileW@8
+IsColorProfileTagPresent@12
+IsColorProfileValid@8
+OpenColorProfileA@16
+OpenColorProfileW@16
+RegisterCMMA@12
+RegisterCMMW@12
+SelectCMM@4
+SetColorProfileElement@20
+SetColorProfileElementReference@12
+SetColorProfileElementSize@12
+SetColorProfileHeader@8
+SetStandardColorSpaceProfileA@12
+SetStandardColorSpaceProfileW@12
+TranslateBitmapBits@44
+TranslateColors@24
+UninstallColorProfileA@12
+UninstallColorProfileW@12
+UnregisterCMMA@8
+UnregisterCMMW@8
